Assemble Header and Navigaiton to Pages (#45)

--- a/client/index.html
+++ b/client/index.html
@@ -22,10 +22,10 @@
   <ul>
     <li><a href="./page/home.html">메인 홈 : home.html</a></li>
     <li><a href="./page/best.html">베스트 : best.html</a></li>
-    <li><a href="./page/deal_info.html">상품 상세 : deal_info.html</a></li>
+    <li><a href="./page/product_info.html">상품 상세 : product_info.html</a></li>
     <li><a href="./page/cart.html">장바구니 : cart.html</a></li>
     <li><a href="./page/signup.html">회원 가입 : signup.html</a></li>
-    <li><a href="./page/signin.html">로그인 : signin.html</a></li>
+    <li><a href="./page/login.html">로그인 : login.html</a></li>
   </ul>
 
   <!-- swiper.js 샘플 -->
