Fix Main layout CSS and Listup Popup (#45)

--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,15 @@
     <li><a href="./page/signup.html">회원 가입 : signup.html</a></li>
     <li><a href="./page/login.html">로그인 : login.html</a></li>
   </ul>
+  <br>
+  <h3>팝업</h3>
+  <p>배치가 필요합니다</p>
+  <ul>
+    <li><a href="./page/include/top_banner&popup.html">메인 홈 > 중앙 광고 팝업</a></li>
+    <li><a href="./page/include/product_list.html">베스트 > 장바구니 모달 팝업</a></li>
+    <li><a href="./page/include/inquiry_popup.html">상품 상세 > 상품 문의하기 팝업</a></li>
+    <li><a href="./page/include/review_popup.html">상품 상세 > 후기 작성 팝업</a></li>
+  </ul>
 
   <!-- swiper.js 샘플 -->
   <!--
