--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko-KR">
+
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -10,8 +11,13 @@
   <script src="./js/main.js" type="module" defer></script>
   <title>Index</title>
   <style>
-    body {padding: 50px;}
-    li {padding: 10px;}
+    body {
+      padding: 50px;
+    }
+
+    li {
+      padding: 10px;
+    }
   </style>
 </head>
 
@@ -32,7 +38,7 @@
   <p>배치가 필요합니다</p>
   <ul>
     <li><a href="./page/include/top_banner&popup.html">메인 홈 > 중앙 광고 팝업</a></li>
-    <li><a href="./page/include/product_list.html">베스트 > 장바구니 모달 팝업</a></li>
+    <li><a href="./page/include/cart__modal.html">베스트 > 장바구니 모달 팝업</a></li>
     <li><a href="./page/include/inquiry_popup.html">상품 상세 > 상품 문의하기 팝업</a></li>
     <li><a href="./page/include/review_popup.html">상품 상세 > 후기 작성 팝업</a></li>
   </ul>
@@ -60,4 +66,5 @@
   -->
 
 </body>
+
 </html>
